feat(api): add /me profile endpoints for admin and user
- Added GET /me and PUT /me for AdminApiController and UserApiController
- Updated AdminService and UserService with updateProfile logic (password validation included)
- Adjusted SecurityConfig to protect /me endpoints
- Refactored AdminApiControllerTests and added repository tests for user/admin refresh tokens