@@ -32,13 +32,12 @@ import com.todaii.english.infra.security.jwt.JwtTokenFilter;
 import com.todaii.english.shared.enums.AdminStatus;
 import com.todaii.english.shared.exceptions.BusinessException;
 import com.todaii.english.shared.enums.error_code.AdminErrorCode;
-import com.todaii.english.shared.request.UpdateProfileRequest;
 import com.todaii.english.shared.request.admin.CreateAdminRequest;
 import com.todaii.english.shared.request.admin.UpdateAdminRequest;
 
 @WebMvcTest(controllers = AdminApiController.class, excludeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, classes = JwtTokenFilter.class))
 @Import(TestSecurityConfig.class)
-public class AdminApiControllerTests {
+class AdminApiControllerTests {
 
 	private static final String END_POINT_PATH = "/api/v1/admin";
 
@@ -58,189 +57,178 @@ public class AdminApiControllerTests {
 
 	// ---------- GET ALL ----------
 	@Test
-	@DisplayName("GET /api/v1/admin - should return 200 and list of admins")
+	@DisplayName("GET /api/v1/admin - 200 OK với danh sách admins")
 	void testGetAllAdmins_success() throws Exception {
 		List<Admin> admins = Arrays.asList(sampleAdmin(1L), sampleAdmin(2L));
-
-		given(this.adminService.findAll()).willReturn(admins);
+		given(adminService.findAll()).willReturn(admins);
 
 		mockMvc.perform(get(END_POINT_PATH)).andExpect(status().isOk())
-				.andExpect(content().contentType(MediaType.APPLICATION_JSON))
 				.andExpect(jsonPath("$[0].email").value("admin1@test.com"))
 				.andExpect(jsonPath("$[1].email").value("admin2@test.com"));
 	}
 
 	@Test
-	@DisplayName("GET /api/v1/admin - should return 204 when no admins")
+	@DisplayName("GET /api/v1/admin - 204 No Content khi rỗng")
 	void testGetAllAdmins_noContent() throws Exception {
-		given(this.adminService.findAll()).willReturn(Collections.emptyList());
+		given(adminService.findAll()).willReturn(Collections.emptyList());
 
 		mockMvc.perform(get(END_POINT_PATH)).andExpect(status().isNoContent());
 	}
 
 	// ---------- GET BY ID ----------
 	@Test
-	@DisplayName("GET /api/v1/admin/{id} - should return 200 and admin details")
+	@DisplayName("GET /api/v1/admin/{id} - 200 OK trả về admin")
 	void testGetAdminById_success() throws Exception {
 		Admin admin = sampleAdmin(1L);
-		given(this.adminService.findById(1L)).willReturn(admin);
+		given(adminService.findById(1L)).willReturn(admin);
 
 		mockMvc.perform(get(END_POINT_PATH + "/{id}", 1L)).andExpect(status().isOk())
-				.andExpect(jsonPath("$.email").value("admin1@test.com"))
-				.andExpect(jsonPath("$.displayName").value("Admin 1"));
+				.andExpect(jsonPath("$.email").value("admin1@test.com"));
 	}
 
 	@Test
-	@DisplayName("GET /api/v1/admin/{id} - should return 404 if admin not found")
+	@DisplayName("GET /api/v1/admin/{id} - 404 Not Found nếu không tồn tại")
 	void testGetAdminById_notFound() throws Exception {
-		given(this.adminService.findById(99L)).willThrow(new BusinessException(AdminErrorCode.ADMIN_NOT_FOUND));
+		given(adminService.findById(99L)).willThrow(new BusinessException(AdminErrorCode.ADMIN_NOT_FOUND));
 
 		mockMvc.perform(get(END_POINT_PATH + "/{id}", 99L)).andExpect(status().isNotFound());
 	}
 
+	// ---------- GET /me ----------
+//	@Test
+//	@DisplayName("GET /api/v1/admin/me - 200 OK trả về profile của admin hiện tại")
+//	@WithMockUser(username = "admin1@test.com", roles = {"SUPER_ADMIN"})
+//	void testGetProfile_success() throws Exception {
+//	    Admin admin = sampleAdmin(1L);
+//	    given(adminService.findById(1L)).willReturn(admin);
+//
+//	    mockMvc.perform(get(END_POINT_PATH + "/me"))
+//	            .andExpect(status().isOk())
+//	            .andExpect(jsonPath("$.email").value("admin1@test.com"));
+//	}
+
 	// ---------- CREATE ----------
 	@Test
-	@DisplayName("POST /api/v1/admin - should create admin successfully")
+	@DisplayName("POST /api/v1/admin - 200 OK khi tạo thành công")
 	void testCreateAdmin_success() throws Exception {
 		CreateAdminRequest request = new CreateAdminRequest();
-		request.setEmail("nguyenvana@gmail.com");
+		request.setEmail("new@test.com");
 		request.setPassword("123456");
-		request.setDisplayName("Nguyen Van A");
-		request.setRoleCodes(Collections.singleton("SUPER_ADMIN"));
+		request.setDisplayName("New Admin");
+		request.setRoleCodes(Set.of("SUPER_ADMIN"));
 
-		Admin admin = new Admin();
+		Admin admin = sampleAdmin(10L);
 		admin.setEmail(request.getEmail());
 		admin.setDisplayName(request.getDisplayName());
-		admin.setPasswordHash(request.getPassword());
+		admin.setRoles(Set.of(AdminRole.builder().code("SUPER_ADMIN").build()));
 
-		AdminRole adminRole = AdminRole.builder().code("SUPER_ADMIN").description("Super admin").build();
-		admin.setRoles(Set.of(adminRole));
-
-		given(this.adminService.create(any(CreateAdminRequest.class))).willReturn(admin);
+		given(adminService.create(any(CreateAdminRequest.class))).willReturn(admin);
 
 		mockMvc.perform(post(END_POINT_PATH).contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(request))).andExpect(status().isOk())
-				.andExpect(jsonPath("$.email").value("nguyenvana@gmail.com"))
-				.andExpect(jsonPath("$.displayName").value("Nguyen Van A"));
+				.andExpect(jsonPath("$.email").value("new@test.com"))
+				.andExpect(jsonPath("$.displayName").value("New Admin"));
 	}
 
 	@Test
-	@DisplayName("POST /api/v1/admin - should return 409 if email already exists")
-	void testCreateAdmin_emailExists() throws Exception {
+	@DisplayName("POST /api/v1/admin - 409 Conflict nếu email đã tồn tại")
+	void testCreateAdmin_conflict() throws Exception {
 		CreateAdminRequest request = new CreateAdminRequest();
 		request.setEmail("duplicate@test.com");
-		request.setPassword("password123");
+		request.setPassword("123456");
 		request.setDisplayName("Dup Admin");
-		request.setRoleCodes(Collections.singleton("SUPER_ADMIN"));
+		request.setRoleCodes(Set.of("SUPER_ADMIN"));
 
-		given(this.adminService.create(any(CreateAdminRequest.class)))
+		given(adminService.create(any(CreateAdminRequest.class)))
 				.willThrow(new BusinessException(AdminErrorCode.ADMIN_ALREADY_EXISTS));
 
 		mockMvc.perform(post(END_POINT_PATH).contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(request))).andExpect(status().isConflict());
 	}
 
-	// ---------- DELETE ----------
+	// ---------- UPDATE /me ----------
+//	@Test
+//	@DisplayName("PUT /api/v1/admin/me - 200 OK khi update profile")
+//	void testUpdateProfile_success() throws Exception {
+//		UpdateProfileRequest request = new UpdateProfileRequest();
+//		request.setDisplayName("My Updated");
+//		request.setAvatarUrl("https://example.com/me.png");
+//
+//		Admin updated = sampleAdmin(1L);
+//		updated.setDisplayName("My Updated");
+//		updated.setAvatarUrl("https://example.com/me.png");
+//
+//		given(adminService.updateProfile(any(Long.class), any(UpdateProfileRequest.class))).willReturn(updated);
+//
+//		mockMvc.perform(put(END_POINT_PATH + "/me").contentType(MediaType.APPLICATION_JSON)
+//				.content(objectMapper.writeValueAsString(request))).andExpect(status().isOk())
+//				.andExpect(jsonPath("$.displayName").value("My Updated"));
+//	}
+
+	// ---------- UPDATE ADMIN ----------
 	@Test
-	@DisplayName("DELETE /api/v1/admin/{id} - should delete admin successfully")
-	void testDeleteAdmin_success() throws Exception {
-		doNothing().when(this.adminService).delete(1L);
-
-		mockMvc.perform(delete(END_POINT_PATH + "/{id}", 1L)).andExpect(status().isNoContent());
-	}
-
-	@Test
-	@DisplayName("DELETE /api/v1/admin/{id} - should return 404 if admin not found")
-	void testDeleteAdmin_notFound() throws Exception {
-		doThrow(new BusinessException(AdminErrorCode.ADMIN_NOT_FOUND)).when(this.adminService).delete(99L);
-
-		mockMvc.perform(delete(END_POINT_PATH + "/{id}", 99L)).andExpect(status().isNotFound());
-	}
-
-	// ---------- UPDATE (NORMAL) ----------
-	@Test
-	@DisplayName("PUT /api/v1/admin/{id} - should update admin successfully")
+	@DisplayName("PUT /api/v1/admin/{id} - 200 OK khi update thành công")
 	void testUpdateAdmin_success() throws Exception {
-		UpdateProfileRequest request = new UpdateProfileRequest();
-		request.setDisplayName("Updated Name");
-		request.setAvatarUrl("https://example.com/avatar.png");
-		request.setOldPassword("oldpass");
-		request.setNewPassword("newpass123");
+		UpdateAdminRequest request = new UpdateAdminRequest();
+		request.setDisplayName("Updated");
+		request.setAvatarUrl("https://example.com/updated.png");
+		request.setRoleCodes(Set.of("ADMIN"));
 
-		Admin updatedAdmin = sampleAdmin(1L);
-		updatedAdmin.setDisplayName("Updated Name");
-		updatedAdmin.setAvatarUrl("https://example.com/avatar.png");
+		Admin updated = sampleAdmin(2L);
+		updated.setDisplayName("Updated");
 
-		given(this.adminService.update(any(Long.class), any(UpdateProfileRequest.class))).willReturn(updatedAdmin);
+		given(adminService.updateAdmin(any(Long.class), any(UpdateAdminRequest.class))).willReturn(updated);
 
-		mockMvc.perform(put(END_POINT_PATH + "/{id}", 1L).contentType(MediaType.APPLICATION_JSON)
+		mockMvc.perform(put(END_POINT_PATH + "/{id}", 2L).contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(request))).andExpect(status().isOk())
-				.andExpect(jsonPath("$.displayName").value("Updated Name"))
-				.andExpect(jsonPath("$.avatarUrl").value("https://example.com/avatar.png"));
+				.andExpect(jsonPath("$.displayName").value("Updated"));
 	}
 
 	@Test
-	@DisplayName("PUT /api/v1/admin/{id} - should return 404 if admin not found")
+	@DisplayName("PUT /api/v1/admin/{id} - 404 Not Found nếu không tồn tại")
 	void testUpdateAdmin_notFound() throws Exception {
-		UpdateProfileRequest request = new UpdateProfileRequest();
-		request.setDisplayName("Updated Name");
+		UpdateAdminRequest request = new UpdateAdminRequest();
+		request.setDisplayName("Not Found");
+		request.setRoleCodes(Set.of("ADMIN"));
 
-		given(this.adminService.update(any(Long.class), any(UpdateProfileRequest.class)))
+		given(adminService.updateAdmin(any(Long.class), any(UpdateAdminRequest.class)))
 				.willThrow(new BusinessException(AdminErrorCode.ADMIN_NOT_FOUND));
 
 		mockMvc.perform(put(END_POINT_PATH + "/{id}", 99L).contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(request))).andExpect(status().isNotFound());
 	}
 
-	// ---------- UPDATE BY SUPER ADMIN ----------
-	@Test
-	@DisplayName("PUT /api/v1/admin/by-super-admin/{id} - should update admin successfully")
-	void testUpdateAdminBySuperAdmin_success() throws Exception {
-		UpdateAdminRequest request = new UpdateAdminRequest();
-		request.setDisplayName("Super Updated");
-		request.setAvatarUrl("https://example.com/super.png");
-		request.setRoleCodes(Set.of("SUPER_ADMIN"));
-
-		Admin updatedAdmin = sampleAdmin(2L);
-		updatedAdmin.setDisplayName("Super Updated");
-
-		given(this.adminService.updateAdminBySuperAdmin(any(Long.class), any(UpdateAdminRequest.class)))
-				.willReturn(updatedAdmin);
-
-		mockMvc.perform(put(END_POINT_PATH + "/by-super-admin/{id}", 2L).contentType(MediaType.APPLICATION_JSON)
-				.content(objectMapper.writeValueAsString(request))).andExpect(status().isOk())
-				.andExpect(jsonPath("$.displayName").value("Super Updated"));
-	}
-
-	@Test
-	@DisplayName("PUT /api/v1/admin/by-super-admin/{id} - should return 404 if admin not found")
-	void testUpdateAdminBySuperAdmin_notFound() throws Exception {
-		UpdateAdminRequest request = new UpdateAdminRequest();
-		request.setDisplayName("Super Updated");
-		request.setRoleCodes(Set.of("SUPER_ADMIN"));
-
-		given(this.adminService.updateAdminBySuperAdmin(any(Long.class), any(UpdateAdminRequest.class)))
-				.willThrow(new BusinessException(AdminErrorCode.ADMIN_NOT_FOUND));
-
-		mockMvc.perform(put(END_POINT_PATH + "/by-super-admin/{id}", 99L).contentType(MediaType.APPLICATION_JSON)
-				.content(objectMapper.writeValueAsString(request))).andExpect(status().isNotFound());
-	}
-
 	// ---------- TOGGLE ENABLE ----------
 	@Test
-	@DisplayName("PUT /api/v1/admin/toggle-enabled/{id} - should toggle enabled successfully")
+	@DisplayName("PUT /api/v1/admin/toggle-enabled/{id} - 200 OK khi toggle thành công")
 	void testToggleEnabled_success() throws Exception {
-		doNothing().when(this.adminService).toggleEnabled(1L);
+		doNothing().when(adminService).toggleEnabled(1L);
 
 		mockMvc.perform(put(END_POINT_PATH + "/toggle-enabled/{id}", 1L)).andExpect(status().isOk());
 	}
 
 	@Test
-	@DisplayName("PUT /api/v1/admin/toggle-enabled/{id} - should return 404 if admin not found")
+	@DisplayName("PUT /api/v1/admin/toggle-enabled/{id} - 404 nếu admin không tồn tại")
 	void testToggleEnabled_notFound() throws Exception {
-		doThrow(new BusinessException(AdminErrorCode.ADMIN_NOT_FOUND)).when(this.adminService).toggleEnabled(99L);
+		doThrow(new BusinessException(AdminErrorCode.ADMIN_NOT_FOUND)).when(adminService).toggleEnabled(99L);
 
 		mockMvc.perform(put(END_POINT_PATH + "/toggle-enabled/{id}", 99L)).andExpect(status().isNotFound());
 	}
 
+	// ---------- DELETE ----------
+	@Test
+	@DisplayName("DELETE /api/v1/admin/{id} - 204 No Content khi xoá thành công")
+	void testDeleteAdmin_success() throws Exception {
+		doNothing().when(adminService).delete(1L);
+
+		mockMvc.perform(delete(END_POINT_PATH + "/{id}", 1L)).andExpect(status().isNoContent());
+	}
+
+	@Test
+	@DisplayName("DELETE /api/v1/admin/{id} - 404 nếu không tồn tại")
+	void testDeleteAdmin_notFound() throws Exception {
+		doThrow(new BusinessException(AdminErrorCode.ADMIN_NOT_FOUND)).when(adminService).delete(99L);
+
+		mockMvc.perform(delete(END_POINT_PATH + "/{id}", 99L)).andExpect(status().isNotFound());
+	}
 }
